[project]
name = "brev-mcp"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "httpx>=0.28.1",
 "mcp>=1.1.0",
 "protobuf>=5.29.1",
]
[[project.authors]]
name = "tmonty12"
email = "tjmontfort12@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
brev-mcp = "brev_mcp:main"
